assignment-3-changes-updates

--- a/index.html
+++ b/index.html
@@ -1,12 +1,319 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learning Code - Experiences</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/main.js" defer></script>
+  </head>
+  <body>
+    <header class="inner-container">
+     <a href="index.html"><img src="img/logo.jpg" alt="page-logo" /></a> 
+      <div class="flex-container">
+        <button class="toggle-btn">
+          <svg
+            width="800px"
+            height="800px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="Menu / Menu_Alt_01">
+              <path
+                id="Vector"
+                d="M12 17H19M5 12H19M5 7H19"
+                stroke="#000000"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </g>
+          </svg>
+        </button>
+        <nav>
+          <ul class="main-menu">
+            <li><a href="#">LEARN</a></li>
+            <li><a href="#">TEACH</a></li>
+            <li><a href="volunteer.html">VOLUNTEER</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">BLOG</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="container-padding">
+        <div class="padding-medium">
+            <h1>Experiences</h1>
+            <p>
+              We are excited to offer our popular in-person learning experiences as
+              well as live online and hybrid models, bringing accessible computer
+              science to communities across Canada.
+            </p>
+            <form action="#" method="post" name="search">
+              <div class="search-flex">
+                <div class="search-input">
+                  <input type="text" size="80" />
+                </div>
+                <div class="search-icon">
+                  <svg
+                    width="800px"
+                    height="800px"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M10 5C7.23858 5 5 7.23858 5 10C5 12.7614 7.23858 15 10 15C11.381 15 12.6296 14.4415 13.5355 13.5355C14.4415 12.6296 15 11.381 15 10C15 7.23858 12.7614 5 10 5ZM3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10C17 11.5719 16.481 13.0239 15.6063 14.1921L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3166 21.0976 19.6834 21.0976 19.2929 20.7071L14.1921 15.6063C13.0239 16.481 11.5719 17 10 17C6.13401 17 3 13.866 3 10Z"
+                      fill="#fff"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </form>
+        </div>
+        <section class="get-started-cards">
+          <h2>Let's get started!</h2>
+          <div class="flex-medium">
+
+              <div class="started-cards">
+                <svg
+                  fill="#ec0a18"
+                  viewBox="0 0 64 64"
+                  data-name="Layer 1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <title />
+                  <path d="M20,53a2,2,0,0,0-2,2h4A2,2,0,0,0,20,53Z" />
+                  <path d="M24,49a2,2,0,0,0-2,2h4A2,2,0,0,0,24,49Z" />
+                  <path d="M40,49a2,2,0,0,0-2,2h4A2,2,0,0,0,40,49Z" />
+                  <path
+                    d="M8,62H56A24,24,0,0,0,8,62Zm21-7.04449A3.04445,3.04445,0,0,1,25.95557,58H17.0235a3.00173,3.00173,0,0,1-3.02008-2.83289,4,4,0,0,1,4.02826-4.167v-.00024A3.96846,3.96846,0,0,1,22,47v-.30194a3.6336,3.6336,0,0,1,3.31177-3.69312A3.5002,3.5002,0,0,1,29,46.5ZM35,46.5a3.5002,3.5002,0,0,1,3.68823-3.49506A3.6336,3.6336,0,0,1,42,46.69806V47a3.96846,3.96846,0,0,1,3.96832,3.99988v.00024a4,4,0,0,1,4.02826,4.167A3.00173,3.00173,0,0,1,46.9765,58H38.04443A3.04445,3.04445,0,0,1,35,54.95551Z"
+                  />
+                  <path d="M46,56a2,2,0,0,0-4,0Z" />
+                  <path
+                    d="M7,4a3,3,0,0,1,0,6,1,1,0,0,0-1,1v5H8V11.89941A5.00019,5.00019,0,1,0,2,7H4A3.00328,3.00328,0,0,1,7,4Z"
+                  />
+                  <rect height="2" width="2" x="6" y="18" />
+                  <polygon points="51 17 41 13 41 27 51 31 51 17" />
+                  <polygon points="52 31 62 27 62 13 52 17 52 31" />
+                  <path
+                    d="M6.71332,35.3916A4.28544,4.28544,0,0,0,10.05975,37H21V25H8v7H4ZM18,33.5H15v-1h3Zm-7-5h7v1H11Zm0,4h2v1H11Z"
+                  />
+                  <path
+                    d="M30,4a5.99672,5.99672,0,0,0-1,11.91V24h2V15.91A5.99672,5.99672,0,0,0,30,4Zm0,3.5A2.50294,2.50294,0,0,0,27.5,10h-1A3.50424,3.50424,0,0,1,30,6.5Z"
+                  />
+                </svg>
+                <h3>Get inspired</h3>
+                <p>
+                  Browse our blogs to find insights,workshop reviews, and inspiring
+                  learner stories!
+                </p>
+              </div>
+              <div class="started-cards">
+                <svg viewBox="0 0 512 512">
+                  <style>
+                    .st0 {
+                      fill: #ec0a18;
+                    }
+                  </style>
+                  <path
+                    d="M81.44 116.972c23.206 0 42.007-18.817 42.007-42.008 0-23.215-18.801-42.016-42.007-42.016-23.216 0-42.016 18.801-42.016 42.016 0 23.191 18.8 42.008 42.016 42.008zM224.166 245.037c0-.856-.142-1.673-.251-2.498l62.748-45.541c3.942-2.867 4.83-8.411 1.963-12.362a8.897 8.897 0 00-7.17-3.652 8.815 8.815 0 00-5.191 1.689l-62.874 45.636c-2.341-1.068-4.909-1.704-7.65-1.704h-34.178l-8.294-47.222c-4.555-23.811-14.112-42.51-34.468-42.51h-86.3C22.146 136.873 0 159.019 0 179.383v141.203c0 10.178 8.246 18.432 18.424 18.432h12.864l7.005 120.424c0 10.83 8.788 19.61 19.618 19.61h39.228c10.83 0 19.61-8.78 19.61-19.61l9.204-238.53h.463l5.27 23.269c1.744 11.097 11.293 19.28 22.524 19.28h51.534c10.176 0 18.422-8.246 18.422-18.424zm-156.14-26.176v-67.123h24.126v67.123l-12.817 15.118-11.309-15.118z"
+                    class="st0"
+                  />
+                  <path
+                    d="M190.326 47.47v153.399h24.126V71.595h273.422v230.536H214.452v-29.018h-24.126v53.143H512V47.47zM311.81 388.597c0-18.801-15.235-34.029-34.028-34.029-18.801 0-34.036 15.228-34.036 34.029 0 18.785 15.235 34.028 34.036 34.028 18.792 0 34.028-15.244 34.028-34.028zM277.781 440.853c-24.259 0-44.866 15.919-52.782 38.199h105.565c-7.916-22.281-28.524-38.199-52.783-38.199zM458.573 388.597c0-18.801-15.235-34.029-34.028-34.029-18.801 0-34.036 15.228-34.036 34.029 0 18.785 15.235 34.028 34.036 34.028 18.793 0 34.028-15.244 34.028-34.028zM424.545 440.853c-24.259 0-44.866 15.919-52.783 38.199h105.565c-7.916-22.281-28.523-38.199-52.782-38.199z"
+                    class="st0"
+                  />
+                </svg>
+                <h3>Register for a course or workshop</h3>
+                <p>
+                  Find your location and learning goals, and we'll help you find the
+                  perfect in-person experience!
+                </p>
+              </div>
+              <div class="started-cards">
+                <svg
+                  fill="#ec0a18"
+                  viewBox="0 0 1024 1024"
+                  class="icon"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M930.56 192l-138.56-133.12A91.84 91.84 0 0 0 723.52 32a96 96 0 0 0-67.2 29.44L124.48 615.04a32 32 0 0 0-5.76 8.96V628.8L32 947.84a32 32 0 0 0 32 40 32 32 0 0 0 9.28 0l314.88-96h4.48a32 32 0 0 0 8.64-6.08l176.96-184.32a32 32 0 0 0-46.08-44.16l-155.2 160L192 636.48 704 105.92a32 32 0 0 1 22.4-9.92 33.92 33.92 0 0 1 22.72 8.96l138.56 133.12a32 32 0 0 1 0 45.12l-23.68 23.04A32 32 0 0 0 911.04 352l22.08-23.04A96 96 0 0 0 930.56 192zM108.8 908.48l55.68-210.24 152.32 146.24z"
+                  />
+                  <path
+                    d="M688.32 462.72l-66.56 69.12A32 32 0 1 0 668.16 576L736 507.2a32 32 0 0 0-46.08-44.16zM822.72 369.92a32 32 0 0 0-45.12 0 32 32 0 0 0-7.04 10.56A32 32 0 0 0 777.6 416a32 32 0 0 0 22.4 9.28 32 32 0 0 0 12.48-2.24 32 32 0 0 0 10.24-7.04 32 32 0 0 0 7.04-34.88 38.4 38.4 0 0 0-7.04-11.2z"
+                    fill="#ec0a18"
+                  />
+                </svg>
+                <h3>Take part in your community</h3>
+                <p>
+                  Learning is always better together.Get to know the members of your
+                  local learning community!
+                </p>
+              </div>
+          </div>
+          <div class="button-started">
+            <button class="button">SEE EXPERIENCES</button>
+          </div>
+        </section>
+
+        <section class="lessons-explore">
+          <h2>Explore lessons</h2>
+          <div class="scroll">
+            <div class="for-flex-one">
+              <div class="scroll-card-one">
+                <h3>Post-Secondary Education</h3>
+                <p>
+                  A comprehensive approach to Post-Secondary Computer Science
+                  education includes learning about the following focus areas:
+                </p>
+              </div>
+              <div class="scroll-card-one">
+                <h3>Programming</h3>
+                <p>
+                  By the end, students should be able to create a simple
+                  computer program.
+                </p>
+                <p class="for-bold">PROGRAMMING LESSONS ></p>
+              </div>
+              <div class="scroll-card-one">
+                <h3>Computing</h3>
+                <p>
+                  By the end, students should unterstand and be able to use al
+                  the tools and devices.
+                </p>
+                <p class="for-bold">COMPUTING LESSONS ></p>
+              </div>
+              <div class="scroll-card-one">
+                <h3>Networks</h3>
+                <p>
+                  By the end, students should be able to connect local area
+                  networks.
+                </p>
+                <p class="for-bold">NETWORK LESSONS ></p>
+              </div>
+            </div>
+            <div class="for-flex-two">
+              <div class="scroll-card-two">
+                <h3>Data</h3>
+                <p>
+                  By the end, students should be able to explain how we
+                  store,organize,and analyze data.
+                </p>
+                <p class="for-bold">DATA LESSONS ></p>
+              </div>
+              <div class="scroll-card-two">
+                <h3>Technology</h3>
+                <p>
+                  By the end, students should be able to expore the ways in
+                  which technology has shaped us.
+                </p>
+                <p class="for-bold">TECHNOLOGY LESSONS ></p>
+              </div>
+              <div class="scroll-card-two">
+                <h3>Design</h3>
+                <p>
+                  By the end, students should be able to apply design
+                  principles.
+                </p>
+                <p class="for-bold">DESIGN LESSONS ></p>
+              </div>
+              <div class="scroll-card-two">
+                <h3>Social Media</h3>
+                <p>
+                  By the end, students should be able to understand the
+                  importance of social media in marketing.
+                </p>
+                <p class="for-bold">SOCIAL LESSONS ></p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <section class="learning-experience">
+        <h2>Learning Experiences</h2>
+        <p>Showing the <span>4 closest experiences</span></p>
+        <div class="flex-learning-experience">
+            <div class="learning-card">
+              <img src="img/learning-img-one.webp" alt="people wroking on laptop" />
+              <p>APR 11, 2023</p>
+              <h3>JavaScript for the Web 18+</h3>
+            </div>
+            <div class="learning-card">
+              <img src="img/learning-img-two.webp" alt="people-talking" />
+              <p>APR 22, 2023</p>
+              <h3>Webmaking with HTML & CSS 18+</h3>
+            </div>
+            <div class="learning-card">
+              <img src="img/learning-img-three.webp" alt="people talking" />
+              <p>MAY 4, 2023</p>
+              <h3>Digital Tools for Branding 18+</h3>
+            </div>
+            <div class="learning-card">
+              <img src="img/learning-img-four.webp" alt="girl working on laptop" />
+              <p>MAY 13, 2023</p>
+              <h3>Artmaking with Scratch 9-12</h3>
+            </div>
+        </div>
+        <button class="load-more-btn">LOAD MORE</button>
+      </section>
+      <section class="join-community">
+        <h2>Join Our Community</h2>
+        <p>
+          Join us as a learner, volunteer, sponsor or advocate and be the first
+          to hear about upcoming events, learning resources, exciting new
+          partnerships and more!
+        </p>
+        <div class="flex-mail">
+            <div>
+
+                <form action="#" mthod="post" name="Membership form">
+                  <div class="signup-email">
+                    <input id="email" type="email" value="Email" name="email" />
+                  </div>
+            </div>
+              <div class="email-submit">
+                <input type="submit" value="Sign-Up" />
+              </div>
+            </form>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-section-one">
+        <a href="/index.html"><img src="img/logo.jpg" alt="page-logo" /></a>
+        <ul class="footer-list-items">
+            <div>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Work With Us</a></li>
+            </div>
+            <div>
+
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Sponsors</a></li>
+            </div>
+        </ul>
+      </div>
+      <div class="copyright-class">
+        <p>Copyright © 2023</p>
+        <p>For Educational Purposes Only</p>
+      </div>
+    </footer>
+  </body>
 </html>
